# BrainWunk

./: BrainWunk.cpp  BrainWunk.hpp  CMakeLists.txt  README.md  main.cpp  makefile
include/: BrainWunk.hpp
source/: BrainWunk.cpp  main.cpp
